# r2_labs

./: CHANGELOG.md  README.md  __init__.py  example.env  pyproject.toml  version.py
.github/workflows/: release.yml
.r2_env/: pyvenv.cfg
examples/: exec_mode.ipynb  joint_move.ipynb  launch_training_ui.py  stream_arm_state.ipynb  trajectory_motion.ipynb  view_trajectory.ipynb  visual_pose_motion.ipynb
examples/notebooks/: correct_learned_behavior.ipynb  exec_mode.ipynb  joint_move.ipynb  model_services.ipynb  progress_prediction_training.ipynb  record_trajectory.ipynb  skill_training.ipynb  stream_arm_state.ipynb  trajectory_motion.ipynb  view_trajectory.ipynb  visual_pose_motion.ipynb
examples/scripts/: align_leader.py  calibrate_j0.py  collect_data.py  exec_mode.py  joint_move.py  learned_behavior.py  record_trajectory.py  stream_arm_state.py  surface_mine_test.py  train_online_bc.py  train_progress_prediction.py  train_skill.py  trajectory_motion.py  view_trajectory.py  visual_pose_motion.py
examples/scripts/training_ui/: README.md  __init__.py  app.py  launch.py
examples/scripts/training_ui/static/: app.js  index.html  styles.css
mcp_server/: __init__.py  __main__.py  resources.py  serialization.py  serialization_test.py  server.py
mcp_server/tools/: __init__.py  behaviour.py  control.py  library.py  status.py  trainer.py
rpc/: __init__.py  client.py  server.py  subscriber.py
rpc/tests/: test_metrics.py  test_ping_version.py  test_publisher_subscriber.py
sdk/: __init__.py  client.py  futures.py  logging.py  progress_widget.py  rpc_api.py  sentry.py
sdk/tests/: test_cancellation.py  test_query_client.py  test_rpc_api.py
sdk/training_ui/: README.md  __init__.py  app.py  launch.py
sdk/training_ui/static/: app.js  index.html  styles.css
tests/: test_version.py
