[project]
name = "r2-labs"
version = "0.1.1"
description = "Lightweight client SDK for R2 robot control"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "ipykernel",
    "loguru",
    "numpy",
    "pydantic>=2.12.5",
    "pyzmq",
    "uvicorn[standard]>=0.40.0",
    "zstd",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["r2_labs"]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "r2_labs/__init__.py"
"rpc" = "r2_labs/rpc"
"sdk" = "r2_labs/sdk"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "absl-py>=2.3.1",
    "dash>=3.4.0",
    "evdev>=1.9.2; sys_platform == 'linux'",
]
