[project]
name = "r2-labs"
version = "0.1.2"
description = "Lightweight client SDK for R2 robot control"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "ipykernel",
    "loguru",
    "python-dotenv>=1.0.0",
    "numpy",
    "pydantic>=2.12.5",
    "pyzmq",
    "uvicorn[standard]>=0.40.0",
    "zstd",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[loguru]>=2.0.0"]
mcp = ["mcp>=1.26.0", "Pillow"]

[project.scripts]
r2-mcp = "r2_labs.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["r2_labs"]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "r2_labs/__init__.py"
"version.py" = "r2_labs/version.py"
"rpc" = "r2_labs/rpc"
"sdk" = "r2_labs/sdk"
"mcp_server" = "r2_labs/mcp_server"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "absl-py>=2.3.1",
    "dash>=3.4.0",
    "evdev>=1.9.2; sys_platform == 'linux'",
    "sentry-sdk[loguru]>=2.0.0",
]
